--- a/bday22.html
+++ b/bday22.html
@@ -9,6 +9,8 @@
 <center>
   <h1><img src="cirno (cropped) bday.png" /> <img src="BSR website banner birthday 2.png" width="400" height="200"/> <img src="cirno (cropped) bday.png" /></h1>
 <br>
+  <h3>2nd Birthday Skin</h3>
+<br>
   <img src="bsr2yr-postbday.png" width="650" height="150">
 <br>
 <h2>Play Now:</h2><audio controls="" preload="none" style="width:16em;padding:0;"><source src="http://98.55.62.153:8000/sid=1" type="audio/mpeg"></audio>
